apps/conduit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conduit
  labels:
    pod-security.kubernetes.io/enforce: baseline
