apps/conduit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit
  namespace: conduit
spec:
  type: ClusterIP
  selector:
    app: conduit
  ports:
    - port: 6167
      targetPort: 6167
      protocol: TCP
